@@ -124,8 +124,8 @@ $(SYMROOT)/modules/$(MODULE_NAME).dylib: $(MODULE_OBJS) $(MODULE_DEPENDENCIES) $
 	@echo "	[LD] $(MODULE_NAME).dylib"
 
 	@ld -arch i386 \
-	-alias _$(MODULE_START) start \
 	-dylib -read_only_relocs suppress \
+	-alias _$(MODULE_START) start \
 	-S -Z -dead_strip_dylibs \
 	-no_uuid \
 	-current_version $(MODULE_VERSION) -compatibility_version $(MODULE_COMPAT_VERSION) \
